# otk-pyoptix

./: .gitignore  README.md
.github/workflows/: build-wheels.yml
optix/: MANIFEST.in  README.md  main.cpp  pyproject.toml  setup.py
